fix: CWU-65 horizontal scrolling

--- a/src/static/assets/scss/common/_body.scss
+++ b/src/static/assets/scss/common/_body.scss
@@ -4,6 +4,7 @@ html {
 
 body {
 	// overflow-x: hidden; // Prevents horizontal scroll bug
+	overflow-x: hidden;
 
 	* {
 		// Box Sixing
